--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,12 +15,12 @@
         <TextView
             android:id="@+id/titlepage"
             android:layout_marginTop="20dp"
-            android:textSize="28sp"
+            android:textSize="32sp"
             android:textColor="#FFF"
             android:text="ToDoList"
             android:textAlignment="center"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:gravity="center_horizontal">
         </TextView>
         <TextView
@@ -42,7 +42,7 @@
         </View>
     </LinearLayout>
     <androidx.recyclerview.widget.RecyclerView
-        android:layout_marginTop="60dp"
+        android:layout_marginTop="-60dp"
         android:layout_marginRight="16dp"
         android:layout_marginLeft="16dp"
         android:layout_width="match_parent"
