--- a/app/src/main/res/layout/item_does.xml
+++ b/app/src/main/res/layout/item_does.xml
@@ -1,6 +1,61 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:background="#FFF"
+    android:orientation="horizontal"
+    android:layout_height="100dp">
+    <LinearLayout
+        android:layout_width="220dp"
+        android:layout_height="match_parent"
+        android:layout_marginLeft="16dp"
+        android:orientation="vertical">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <TextView
+            android:id="@+id/titledoes"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAlignment="center"
+            android:gravity="center_horizontal"
+            android:layout_marginTop="19dp"
+            android:text="Buy Books"
+            android:textColor="#000C5D"
+            android:textSize="22sp">
+
+        </TextView>
+        <TextView
+            android:id="@+id/does"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Go to the superMarket"
+            android:textAlignment="center"
+            android:gravity="center_horizontal"
+            android:textSize="18sp"
+            android:textColor="#ADADAD"
+            android:layout_marginTop="8dp"
+            >
+
+        </TextView>
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_marginTop="30dp"
+        android:layout_marginLeft="75dp"
+        android:layout_height="wrap_content">
+        <TextView
+            android:id="@+id/duedate"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Tomorrow"
+            android:textAlignment="center"
+            android:gravity="center_horizontal"
+            android:textColor="#F63EA5"
+            android:textSize="18sp"
+            android:layout_marginTop="8dp"
+            >
+        </TextView>
+
+
+    </LinearLayout>
+
+</LinearLayout>
